Fixed StatTracker font and spacing

--- a/src/App.css
+++ b/src/App.css
@@ -40,7 +40,7 @@ section {
   text-align: center;
   margin: 20px 30px 0px 30px;
   border-radius: 10px;
-  padding: 20px 30px;
+  padding: 30px 30px;
   background-color: white;
 }
 
@@ -106,14 +106,10 @@ section {
   justify-content: space-between;
 }
 
-.stat-tracker {
-  margin-bottom: 10px;
-}
-
 .stat-tracker > .value {
-  font-size: x-large;
+  font-size: xx-large;
   font-weight: bold;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
 }
 
 .stat-tracker > .description {
@@ -122,7 +118,7 @@ section {
 }
 
 .separator {
-  margin: 10px 0px 20px 0px;
+  margin: 20px 0px 20px 0px;
   width: 70px;
   height: 0;
   border: 1px solid hsl(0, 0%, 48%, 0.2);
@@ -133,6 +129,7 @@ section {
   height: 10px;
   border-radius: 5px;
   background-color: hsl(0, 0%, 48%, 0.1);
+  margin-top: 30px;
 }
 
 .progress-bar > .progress {
